# bookstore

./: .gitignore  Dockerfile  Makefile  README.md  TEST.json  db.sqlite3  docker-compose.yml  env.dev  env.dev.example  manage.py  pyproject.toml
.github/workflows/: github-actions-demo.yml
bookstore/: settings.py  urls.py
order/: factories.py  tests_main.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: factories.py  tests.py
order/tests/test_serializers/: test_serializer.py
order/tests/test_viewsets/: __init__.py  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_remove_product_categories_product_category.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/: __init__.py  factories.py  tests.py
product/tests/test_serializers/: __init__.py  test_product_serializer.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
